fix: gap tech item

--- a/src/containers/Landing/Tech/TechItem/style.module.scss
+++ b/src/containers/Landing/Tech/TechItem/style.module.scss
@@ -35,7 +35,7 @@
 
     @include mobile {
         flex-direction: column;
-        gap: rem(20px);
+        gap: rem(48px);
 
         .item-img {
             width: 100%;
